# 003-arquitetura-flask

./: .env  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  settings.toml  test.db
.github/workflows/: install_lint_test.yml
pydaria/: app.py  development.db  models.py  testing.db
pydaria/blueprints/restapi/: __init__.py  resources.py
pydaria/blueprints/webui/: __init__.py  views.py
pydaria/blueprints/webui/templates/: index.html
pydaria/ext/: admin.py  appearance.py  auth.py  commands.py  configuration.py  database.py
pydaria/tests/: conftest.py
templates/: index.html
