[tool.poetry]
name = "pydaria"
version = "0.1.0"
description = "Arquitetura definitiva para projetos Flask"
authors = ["codeshow"]

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^2.2.2"
flask-admin = "^1.5.4"
flask-bootstrap = "^3.3.7"
flask-restful = "^0.3.7"
flask-shell = "^0.1.3"
flask-sqlalchemy = "^2.4.1"
flask-simplelogin = "^0.0.7"
flask = "^1.1.1"
sqlalchemy = "^1.3.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
flask-debugtoolbar = "^0.10.1"
isort = "^4.3.21"
black = "^19.10b0"
ipdb = "^0.12.3"
pytest-flask = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
